kubernetes-basics/service_lb.yaml
#service.yaml with load balancer

apiVersion: v1
kind: Service
metadata:
  name: bb-entrypoint
  namespace: default
spec:
  type: LoadBalancer
  selector:
      bb: web
  ports:
      - port: 8000
        targetPort: 8000
        nodePort: 30001
