kubernetes-basics/service_np.yaml
#service.yaml with nodeIP 

apiVersion: v1
kind: Service
metadata:
  name: bb-entrypoint
  namespace: default
spec:
  type: NodePort
  selector:
      bb: web
  ports:
      - port: 8000
        targetPort: 8000
        nodePort: 30001
