kubernetes-basics/dashboard-ingress.yaml
## Externally access dashboard

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-dashboard
  namespace: kubernetes-dashboard
spec:
  rules:
  - host: dashboard.com
    http:
      paths:
      - backend:
          service:
            name: kubernetes-dashboard 
            port:
              number: 80
        path: /
        pathType: Prefix
