kubernetes-basics/ingress.yaml
## Base yaml for ingress access using ingress controller

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app
  namespace: default
spec:
  rules:
  - host: myapp.com
    http:
      paths:
      - backend:
          service:
            name : my-ingress-service 
            port :
              number: 8000
        path: /
        pathType: Prefix
